--- a/tableau_continue_learning.ipynb
+++ b/tableau_continue_learning.ipynb
@@ -59,11 +59,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b08f2c4e-b859-444f-9bf6-a90d69237291",
+   "cell_type": "markdown",
+   "id": "ea0f389c",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "run file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a41b16c9",
+   "metadata": {},
    "source": []
   }
  ],
