--- a/tableau_continue_learning.ipynb
+++ b/tableau_continue_learning.ipynb
@@ -63,14 +63,8 @@
    "id": "ea0f389c",
    "metadata": {},
    "source": [
-    "run file"
+    "run file again"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a41b16c9",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
