--- a/wikipedia.ipynb
+++ b/wikipedia.ipynb
@@ -335,7 +335,7 @@
     "- Include version control numbers to keep track of projects.\n",
     "\n",
     "## os module\n",
-    "The os module tells Python where to find and save files.\n",
+    "The __[os](https://docs.python.org/3/library/os.html)__ module tells Python where to find and save files.\n",
     "\n",
     "### os.mkdir('path')\n",
     "Creates a new directory in your project folder or another specified location. Makes a directory in your project folder or another folder you specify. If a directory by the same name already exists in the path specified, os.mkdir will raise an `OSError`. Use a try-except block to handle the error."
