--- a/python_data_visualization.ipynb
+++ b/python_data_visualization.ipynb
@@ -2180,13 +2180,14 @@
     }
    ],
    "source": [
-    "import plotly.express as px\n",
+    "import plotly.io as pio\n",
+    "pio.renderers.default=\"plotly_mimetype+notebook_connected\" # This statement is needed to display Plotly in html\n",
     "\n",
     "#We already have a filtered DataFrame for the 2025 inductees. Since the highest chart position is 1, we need to tell Pandas to find the minimum peakUS chart position for each artist.\n",
     "agg_performers_albums_filtered=performers_albums_filtered.groupby('artist', as_index=False)['peakUS'].min()\n",
     "\n",
     "#Now we build our bar chart\n",
-    "fig=px.bar(agg_performers_albums_filtered, x='artist', y='peakUS', title=\"Peak US Chart Position: 2025 Rock n Roll Hall of Fame Inductees\", color='artist')\n",
+    "fig=pio.bar(agg_performers_albums_filtered, x='artist', y='peakUS', title=\"Peak US Chart Position: 2025 Rock n Roll Hall of Fame Inductees\", color='artist')\n",
     "fig.show()\n",
     "\n"
    ]
@@ -3282,7 +3283,7 @@
     "agg_for_line_performers_albums=performers_albums.groupby(['Release year'], as_index=False).size()\n",
     "\n",
     "#Build the chart\n",
-    "fig2=px.line(agg_for_line_performers_albums, x='Release year', y='size', title=\"Line Chart\", markers=False)\n",
+    "fig2=pio.line(agg_for_line_performers_albums, x='Release year', y='size', title=\"Line Chart\", markers=False)\n",
     "fig2.show()\n"
    ]
   },
@@ -4415,7 +4416,7 @@
    ],
    "source": [
     "#We already filtered the DataFrame for our favorite artist. Use this DataFrame to build the chart.\n",
-    "fig3=px.scatter(kate_bush, x='peakUS', y='peakUK', color='album_title', title=\"Kate Bush Albums: Peak US vs. UK Chart Positions\")\n",
+    "fig3=pio.scatter(kate_bush, x='peakUS', y='peakUK', color='album_title', title=\"Kate Bush Albums: Peak US vs. UK Chart Positions\")\n",
     "\n",
     "fig3.show()"
    ]
