update to render plotly

--- a/python_data_visualization.ipynb
+++ b/python_data_visualization.ipynb
@@ -2181,7 +2181,7 @@
    ],
    "source": [
     "import plotly.io as pio\n",
-    "pio.renderers.default=\"plotly_mimetype+notebook_connected\" # This statement is needed to display Plotly in html\n",
+    "pio.renderers.default=\"notebook\" # This statement is needed to display Plotly in html\n",
     "\n",
     "#We already have a filtered DataFrame for the 2025 inductees. Since the highest chart position is 1, we need to tell Pandas to find the minimum peakUS chart position for each artist.\n",
     "agg_performers_albums_filtered=performers_albums_filtered.groupby('artist', as_index=False)['peakUS'].min()\n",
