fixed typos and plotly issue

--- a/python_data_visualization.ipynb
+++ b/python_data_visualization.ipynb
@@ -860,7 +860,6 @@
     "\n",
     "Line charts reveal trends over time and at minimum require a **date field** and a **measure**. To create a line chart with Pandas, set the `kind =` parameter to `line`.\n",
     "\n",
-    "# Exercise 1\n",
     "<div class=\"accordion\" id=\"accordionExercise1\">\n",
     "\n",
     "  <div class=\"accordion-item\"><h2 class=\"accordion-header\" id=\"ex1-headingOne\"><button class=\"accordion-button fs-3\" type=\"button\" data-bs-toggle=\"collapse\" data-bs-target=\"#ex1-collapseOne\" aria-expanded=\"true\" aria-controls=\"ex1-collapseOne\"><img src=\"images/guidepost_standard_icon.png\" alt=\"\" aria-hidden=\"true\" style=\"height: 3rem; vertical-align: middle; margin-right: 0.5rem;\">Exercise 1: Pandas Line Chart</button></h2><div id=\"ex1-collapseOne\" class=\"accordion-collapse collapse show fs-4\" aria-labelledby=\"ex1-headingOne\" data-bs-parent=\"#accordionExercise1\"> <div class=\"accordion-body fs-4\">Create a line chart that shows the total number of albums released each year by all artists in the `performers_albums` dataset.<ol><li>Identify relevant columns and data types</li><li>Aggregate data and plot</li></ol></div></div>\n",
@@ -1038,7 +1037,6 @@
     "\n",
     "Scatterplots are useful for exploring relationships between two or more numerical variables. In Pandas, you can create a scatterplot using the `.plot()` method by specifying the **x** and **y** keyword arguments.\n",
     "\n",
-    "# Exercise 2\n",
     "<div class=\"accordion\" id=\"accordionExercise2\">\n",
     "\n",
     "  <div class=\"accordion-item\"><h2 class=\"accordion-header\" id=\"ex2-headingOne\"><button class=\"accordion-button fs-3\" type=\"button\" data-bs-toggle=\"collapse\" data-bs-target=\"#ex2-collapseOne\" aria-expanded=\"true\" aria-controls=\"ex2-collapseOne\"><img src=\"images/guidepost_standard_icon.png\" alt=\"\" aria-hidden=\"true\" style=\"height: 3rem; vertical-align: middle; margin-right: 0.5rem;\">Exercise 2: Pandas Scatterplot</button></h2><div id=\"ex2-collapseOne\" class=\"accordion-collapse collapse show fs-4\" aria-labelledby=\"ex2-headingOne\" data-bs-parent=\"#accordionExercise2\"><div class=\"accordion-body fs-4\"><p>Use the Pandas <a href=\"https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.plot.scatter.html#pandas.DataFrame.plot.scatter\">scatterplot</a> documentation to create a scatterplot that visualizes the relationship between the Peak US and Peak UK chart positions for albums released by your favorite artist inducted into the Rock and Roll Hall of Fame.</p><p><strong>BONUS:</strong> reverse the `x` and `y` axis.</p></div></div>\n",
@@ -2197,6 +2195,8 @@
    "id": "b242d301-b659-4d56-9067-938112fb9827",
    "metadata": {},
    "source": [
+    "![](images/plotly_bar_chart.png \"Image of Plotly Bar Chart. Jupyter notebooks do not consistently render plotly in Quarto websites\")\n",
+    "\n",
     "## 📈 Line chart\n",
     "\n",
     "Create a line chart that shows the total number of albums released each year by all artists in the `performers_albums` dataset.\n"
@@ -3292,6 +3292,8 @@
    "id": "df871cb0-66c9-4ec9-ba72-2b24db8df0a4",
    "metadata": {},
    "source": [
+    "![](images/plotly_line_chart.png \"Image of Plotly Line Chart. Jupyter notebooks do not consistently render plotly in Quarto websites\")\n",
+    "\n",
     "## ▒ Scatterplot\n",
     "\n",
     "Create a scatterplot that visualizes the relationship between the Peak US and Peak UK chart positions for albums released by your favorite artist inducted into the Rock and Roll Hall of Fame."
@@ -4426,6 +4428,8 @@
    "id": "f6b5058b-9663-4591-8a31-fe41c35e25f0",
    "metadata": {},
    "source": [
+    "![](images/plotly_scatterplot.png \"Image of Plotly Scatterplot. Jupyter notebooks do not consistently render plotly in Quarto websites\")\n",
+    "\n",
     "# SEABORN\n",
     "![](images/seaborn_logo.png \"Decorative\") Built on top of **Matplotlib** and seamlessly integrated with **Pandas**, the __[Seaborn](https://seaborn.pydata.org/)__ library enhances the visual appeal of Python charts with minimal effort. Featuring built-in themes, concise syntax, and a rich gallery of customizable examples, Seaborn helps you create polisthed, publication-quality visualizations quickly and effectively."
    ]
