--- a/pubmed_author_affiliations.ipynb
+++ b/pubmed_author_affiliations.ipynb
@@ -285,7 +285,7 @@
     "  <div class=\"card-header\">REGEX 101</div>\n",
     "  <div class=\"card-body\"><img src=\"images/regex101.png\" alt=\"Screenshot of regex101 homepage\" class=\"d-block mx-auto\"><h4 class=\"card-title\"><a href=\"https://regex101.com/\">regular expressions 101: build, test, and debug regex</h4>\n",
     "  </div>\n",
-    "  <div> <a href=\"https://regex101.com/\">regular expressions 101: build, test, and debug regex</a> is an interactive tool that helps you build, test, and debug regular expressions across multiple programming languages. It lets you test your regex against sample text, provides real-time explanations as you type, and includes a searchable reference for regex syntax.</div>\n",
+    "  <ul><li><a href=\"https://regex101.com/\">regular expressions 101: build, test, and debug regex</a> is an interactive tool that helps you build, test, and debug regular expressions across multiple programming languages. It lets you test your regex against sample text, provides real-time explanations as you type, and includes a searchable reference for regex syntax.</li></ul>\n",
     "</div>\n",
     "\n",
     ":::\n",
@@ -295,8 +295,8 @@
     "  <div class=\"card-header\">EFFECTIVE DATA VISUALIZATION</div>\n",
     "  <div class=\"card-body\"><img src=\"images/cover_learning_regular_expressions.png\" alt=\"learning regular expressions book cover\" class=\"d-block mx-auto\" style=\"max-width: 100%; height: auto;\"><h4 class=\"card-title\"><a href=\"https://search.library.osu.edu/permalink/01OHIOLINK_OSU/rr4vai/alma991085516536408507\">Learning Regular Expressions</a></h4>\n",
     "  </div>\n",
-    "  <div><a href=\"https://search.library.osu.edu/permalink/01OHIOLINK_OSU/rr4vai/alma991085516536408507\">Learning Regular Expressions</a> by <strong>Ben Forta</strong>** is available through the Libraries' <a href=\"https://search.library.osu.edu/permalink/01OHIOLINK_OSU/2g3e0k/alma991060545609708507\">O'Reilly Online Learning</a> collection of technical books and videos. Each chapter is structured as a lesson, guiding you through how to match individual characters or sets of characters, use metacharacters, and more—making it a practical resource for mastering regex step by step.\n",
-    "  </div>\n",
+    "  <ul></li><a href=\"https://search.library.osu.edu/permalink/01OHIOLINK_OSU/rr4vai/alma991085516536408507\">Learning Regular Expressions</a> by <strong>Ben Forta</strong>** is available through the Libraries' <a href=\"https://search.library.osu.edu/permalink/01OHIOLINK_OSU/2g3e0k/alma991060545609708507\">O'Reilly Online Learning</a> collection of technical books and videos. Each chapter is structured as a lesson, guiding you through how to match individual characters or sets of characters, use metacharacters, and more—making it a practical resource for mastering regex step by step.</li>\n",
+    "  </ul>\n",
     "\n",
     "</div>\n",
     "\n",
