fixed image tags

--- a/icite.ipynb
+++ b/icite.ipynb
@@ -46,13 +46,13 @@
     "- Under **Fiscal Year**, select **Active Projects**.\n",
     "- Under **Organization**, search for and select **Ohio State University**.\n",
     "\n",
-    "![nih_reporter_1_search.png](images/nih_reporter_1_search.png \"Screenshot showing the NIH Reporter Interface with Active Projects entered under Fiscal Year and Ohio State University entered under Organization\")\n",
+    "![](images/nih_reporter_1_search.png \"Screenshot showing the NIH Reporter Interface with Active Projects entered under Fiscal Year and Ohio State University entered under Organization\")\n",
     "\n",
     "## Step 2: Browse active projects\n",
     "- As of **May 6, 2025** there were **687 active projects** at The Ohio State University.\n",
     "- Browse the list and click on a project that interests you.\n",
     "\n",
-    "![nih_reporter_2_select_project.png](images/nih_reporter_2_select_project.png \"Screenshot of the results page showing funded projects with the project Molecular biophysics predoctoral training at the Ohio State University circled\")\n",
+    "![](images/nih_reporter_2_select_project.png \"Screenshot of the results page showing funded projects with the project Molecular biophysics predoctoral training at the Ohio State University circled\")\n",
     "\n",
     "## Step 3: Review project details\n",
     "- Read the **project abstract** to understand its focus.\n",
@@ -60,12 +60,12 @@
     "    -  Click on **Publications** in the left-hand menu, or\n",
     "    -  Scroll to the bottom of the project page. \n",
     "\n",
-    "![nih_reporter_3_select_publications.png](images/nih_reporter_3_select_publications.png \"Screenshot of the details page for the project Molecular biophysics predoctoral training at The Ohio State University with Publications circled in the left screen menu\")\n",
+    "![](images/nih_reporter_3_select_publications.png \"Screenshot of the details page for the project Molecular biophysics predoctoral training at The Ohio State University with Publications circled in the left screen menu\")\n",
     "\n",
     "## Step 4: Export the publications\n",
     "- If the publications are listed, use the **Export** option to download the list for further analysis.\n",
     "\n",
-    "![nih_reporter_4_export_publications.png](images/nih_reporter_4_export_publications.png \"Screenshot of the publications page for the project with the location of the Export icon circled\")\n",
+    "![](images/nih_reporter_4_export_publications.png \"Screenshot of the publications page for the project with the location of the Export icon circled\")\n",
     "\n",
     "<div class=\"accordion\" id=\"accordionExercise1\">\n",
     "\n",
