--- a/tableau_research_choose_effective_visual.ipynb
+++ b/tableau_research_choose_effective_visual.ipynb
@@ -121,7 +121,7 @@
     "    Video showing steps 1-4 above\n",
     "</p>\n",
     "\n",
-    "<video src=\"../videos/tableau_related_data.mp4\" \n",
+    "<video src=\"videos/tableau_related_data.mp4\" \n",
     "    autoplay \n",
     "    muted \n",
     "    loop \n",
