--- a/tableau_communicate.ipynb
+++ b/tableau_communicate.ipynb
@@ -340,7 +340,7 @@
     "    Video of steps 1-5 above\n",
     "</p>\n",
     "\n",
-    "<video src=\"../videos/tableau_calculated_fields.mp4\" \n",
+    "<video src=\"videos/tableau_calculated_fields.mp4\" \n",
     "    autoplay \n",
     "    muted \n",
     "    loop \n",
